tests/fixtures/typeck/non_numeric_arithmetic.veyl
fn main() {
    let value = 1 + true;
}
